[workspace]
members = [
    ".",
    "../DEC",
    "../DSCE/dcse",
    "../RAFC/rafce"
]

[package]
name = "omnibus"
version = "0.1.0"
edition = "2021"
description = "Master Control Program for the DSCE Platform"

[dependencies]
shared_memory = "0.12.0"
libc = "0.2"

[dev-dependencies]
# Dependencies for integration testing
